# TokenPrune

./: .clangd  .gitignore  README.md  download.py  fewlog  log  pyproject.toml  test.py
config/: eval.yaml  generate.yaml  train.yaml
config/models/: DeepSeek-R1-Distill-Qwen-7B.yaml  Qwen2.5-1.5B-Instruct.yaml  Qwen3-0.6B-Base.yaml
src/: build_prompts.py  download.py  eval.py  generate.py  math_parser.py  setup.py  train.py
src/cpp/: parser.cpp
src/parser/: __init__.py  parser.pyi
src/parser.egg-info/: PKG-INFO
src/scripts/: eval.py  eval.sh  generate.py  train.py
