[project]
name = "TokenPrune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "accelerate>=1.11.0",
    "flash-attn>=2.8.3",
    "gradio>=5.49.1",
    "hydra-core>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "modelscope>=1.31.0",
    "orjson>=3.11.4",
    "parser",
    "pybind11>=3.0.1",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch==2.5.1",
    "torch-geometric>=2.7.0",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "transformers>=4.57.1",
    "trl>=0.15.2",
    "vllm>=0.7.3",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" },
]
torchvision = [
  { index = "pytorch-cu121" },
]
torchaudio = [
  { index = "pytorch-cu121" },
]
parser = { path = "src/dist/parser-0.0.0-cp310-cp310-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv]
python-preference = "only-managed"

[tool.uv.workspace]
members = ["kvpress"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
